src/main/java/se/isselab/HAnS/folderAnnotation/FolderAnnotation.bnf
/*
Copyright 2021 Herman Jansson & Johan Martinson

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
{
  parserClass="se.isselab.HAnS.folderAnnotation.parser.FolderAnnotationParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="FolderAnnotation"
  psiImplClassSuffix="Impl"
  psiPackage="se.isselab.HAnS.folderAnnotation.psi"
  psiImplPackage="se.isselab.HAnS.folderAnnotation.psi.impl"

  elementTypeHolderClass="se.isselab.HAnS.folderAnnotation.psi.FolderAnnotationTypes"
  elementTypeClass="se.isselab.HAnS.folderAnnotation.psi.FolderAnnotationElementType"
  tokenTypeClass="se.isselab.HAnS.folderAnnotation.psi.FolderAnnotationTokenType"

  psiImplUtilClass="se.isselab.HAnS.folderAnnotation.psi.impl.FolderAnnotationPsiImplUtil"
}

featureToFolderFile ::= CRLF* lpq (CRLF* CS* CRLF* lpq)* CRLF*

//&begin[Referencing]
lpq ::= feature (SEPARATOR feature)* {
mixin="se.isselab.HAnS.referencing.impl.FeatureAnnotationNamedElementImpl"
implements="se.isselab.HAnS.referencing.FeatureAnnotationNamedElement"
methods=[getName setName getNameIdentifier]}
//&end[Referencing]

feature ::= FEATURENAME
